[package]
name = "raydium-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raydium"
path = "src/main.rs"

[features]
# default is mainnet
devnet = [
    "amm-cli/devnet",
    "clmm-cli/devnet",
    "cpswap-cli/devnet",
    "common/devnet",
]

[dependencies]
amm-cli = { path = "../libraries/amm_cli" }
clmm-cli = { path = "../libraries/clmm_cli" }
cpswap-cli = { path = "../libraries/cpswap_cli" }
common = { path = "../libraries/common" }
solana-program = "^2.1.0"
solana-sdk = "^2.1.0"
solana-client = "^2.1.0"
spl-token = { version = "=8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "=1.0.0", features = ["no-entrypoint"] }
anyhow = "1.0.53"
clap = { version = "4.1.8", features = ["derive"] }
