[package]
name = "raydium-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raydium"
path = "src/main.rs"

[features]
# default is mainnet
devnet = [
    "amm-cli/devnet",
    "clmm-cli/devnet",
    "cpswap-cli/devnet",
    "common/devnet",
]

[dependencies]
# Local path dependencies
amm-cli = { path = "../libraries/amm_cli" }
clmm-cli = { path = "../libraries/clmm_cli" }
cpswap-cli = { path = "../libraries/cpswap_cli" }
common = { path = "../libraries/common" }
# Use workspace dependencies for exact Solana 2.3.5 enforcement
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
