[package]
name = "amm-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium_amm/devnet"]

[dependencies]
anchor-client = "=0.29.0"
anchor-lang = "=0.29.0"
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", default-features = false, features = [
    "client",
    "no-entrypoint",
] }
raydium_amm = { git = "https://github.com/LyndsFi/raydium-amm", branch = "master" }
common = { path = "../common" }
solana-program = "^2.1.0"
solana-sdk = "^2.1.0"
solana-client = "^2.1.0"
spl-token = { version = "=8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "=1.0.0", features = ["no-entrypoint"] }
anyhow = "1.0.53"
safe-transmute = "0.11.2"
arrayref = "0.3.6"
clap = { version = "4.1.8", features = ["derive"] }
toml = "0.8.19"
hex = "0.4.3"
bs58 = { version = "0.5.1" }

[lib]
crate-type = ["cdylib", "lib"]
