[package]
name = "amm-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium_amm/devnet"]

[dependencies]
# Use workspace dependencies for exact Solana 2.3.5 enforcement
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
raydium_amm = { workspace = true }
common = { path = "../common" }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
anyhow = { workspace = true }
safe-transmute = { workspace = true }
arrayref = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
