[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
devnet = []

[dependencies]
# Use workspace dependencies for exact Solana 2.3.5 enforcement
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
