[package]
name = "cpswap-cli"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium-cp-swap/devnet"]

[dependencies]
# Use workspace dependencies for exact Solana 2.3.5 enforcement
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "client",
    "no-entrypoint",
] }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
common = { path = "../common" }
spl-memo = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
arrayref = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
colorful = { workspace = true }
hex = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
